Brand tests refactor

--- a/CarAPI/.env
+++ b/CarAPI/.env
@@ -1,8 +1,8 @@
-SECRET_KEY='django-secret-key'
+SECRET_KEY='django-insecure-z7a8m$!m*njyvl@k4^v=z6jm@z6lm&19vh5z0p(#bah*dt6u=-'
 DB_NAME="cars_db"
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
-DB_PORT=
-SUPERUSER_LOGIN=
-SUPERUSER_PASS=""
+DB_USER="postgres"
+DB_PASSWORD=123456
+DB_HOST=localhost
+DB_PORT=5432
+SUPERUSER_LOGIN=rmmajor
+SUPERUSER_PASS="123456"
